applying correct element positions on mobile

--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -14,13 +14,14 @@
   }
 
   .card-header {
-    border-bottom: 2px solid $divider;
+    border-bottom: 1px solid $divider;
     text-align: center;
 
     h2 {
       font-weight: 300;
+      font-size: 18px;
       color: $dark_grey;
-      margin: 15px 0;
+      margin: 12px 0 11px;
     }
   }
 
@@ -31,7 +32,7 @@
     align-items: center;
     
     h3 {
-      font-size: 100px;
+      font-size: 88px;
       font-weight: 300;
       color: $orange;
       margin: 0;
@@ -50,7 +51,7 @@
     display: flex;
     flex-direction: column;
     background-color: $card_footer;
-    padding-top: 17px;
+    padding-top: 15px;
   }
 
   .info {
@@ -66,12 +67,13 @@
 
     span {
       color: $grey;
-      font-size: 13px;
+      font-size: 12px;
     }
 
     p {
       color: $dark_grey;
-      font-size: 16px;
+      font-size: 17px;
+      margin: 6px 0;
     }
   }
 
